Day5/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 3
  template:
    metadata:
      labels:
        app: mysql
    spec:
        containers:
        - name: mysql-container
          image: mysql:latest
          ports:
          - containerPort: 3306
