Day5/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-mysql-service
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 3306
  type: ClusterIP
